welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:5: error: not found: value &&
    if(a<=b)&&(b<=c)
            ^inOrderEqual:16: error: not found: value &&
    if(a<b)&&(b<c)
           ^